--- a/views/show_entires.tt
+++ b/views/show_entires.tt
@@ -12,7 +12,7 @@
 <ul class=entries>
 <% IF entries.size %>
   <% FOREACH id IN entries.keys.nsort %>
-    <li><h2><% entries.$id.title %></h2><% entries.$id.text %>
+    <li><h2><a href="<% request.uri_base %>/view/<% entries.$id.id %>" ><% entries.$id.title %></a></h2><% entries.$id.text %>
   <% END %>
 <% ELSE %>
   <li><em>Unbelievable.  No entries here so far</em>
